fix gap

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -8,7 +8,7 @@
   .content-wrapper {
     display: flex;
     width: 60vw;
-    gap: 25px;
+    gap: 45px;
 
     .text-wrapper {
         justify-content: center;
